[package]
name = "faucet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
dirs = "6"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
